# MSBL-Analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: video-analysis-design.md
gui/: app.py
