[project]
name = "msbl-analyzer"
version = "0.1.0"
description = "analyze MSBL videos"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "GPL v3"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
